--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -2,7 +2,11 @@
 #   To link a homepage widget, specify the URL as a hash `#` followed by the filename of the
 #     desired widget in your `content/home/` folder.
 #   The weight parameter defines the order that the links will appear in.
-
+[[main]]
+  name = "Experience"
+  url = "#experience"
+  weight = 10
+  
 [[main]]
   name = "Home"
   url = "#about"
@@ -18,10 +22,10 @@
   url = "#projects"
   weight = 30
 
-[[main]]
-  name = "Publications"
-  url = "#featured"
-  weight = 40
+#[[main]]
+ # name = "Publications"
+ # url = "#featured"
+ # weight = 40
 
 [[main]]
   name = "Contact"
