--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -22,6 +22,7 @@ copyright = ""
 # Name of Academic theme folder in `themes/`.
 theme = "academic"
 
+googleAnalytics= "UA-179758052-1"
 # Get last modified date for content from Git?
 enableGitInfo = false
 
