--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -81,12 +81,12 @@ edit_page = {repo_url = "https://github.com/gcushen/hugo-academic", content_dir 
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-email = "ishikasingh95@gmail.com"
+email = "ishikasi@usc.edu"
 phone = ""
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {street = "IIT Kanpur", city = "", region = "Uttar Pradesh", postcode = "208016", country = "India", country_code = ""}
+address = {street = "RTH #420, USC", city = "Los Angeles", region = "CA", postcode = "90007", country = "USA", country_code = ""}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
