--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -86,7 +86,7 @@ phone = ""
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {street = "RTH #420, USC", city = "Los Angeles", region = "CA", postcode = "90007", country = "USA", country_code = ""}
+address = {street = "Ginsburg Hall, 2nd Floor, USC", city = "Los Angeles", region = "CA", postcode = "90007", country = "USA", country_code = ""}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
